--- a/src/components/main/cells/cells.css
+++ b/src/components/main/cells/cells.css
@@ -1,8 +1,8 @@
 .cells {
     display: flex;
     flex-wrap: wrap;
-    gap: 1px;
     width: 100%;
-    background-color: #333;
+    background-color: #1a1a1a;
     margin: auto auto 100px;
+    column-gap: 1px;
   }
